<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/widget_margin"
        android:background="#09c"
        android:orientation="vertical">

    <TextView
            android:id="@+id/widget_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            tools:text="Yellow Cake"
            style="@style/TextAppearance.AppCompat.Title"/>

    <ListView
            android:id="@+id/widget_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

</LinearLayout>
