<resources>
    <string name="app_name">Baking</string>

    <!-- fake strings -->
    <string name="fake_name" translatable="false">Nutella Pie</string>
    <string name="fake_ingredient_num" translatable="false">Number of Ingredient: 9</string>
    <string name="fake_step_num" translatable="false">Number of Step: 7</string>
    <string name="fake_servings" translatable="false">Servings: 8</string>
    <string name="face_recipe_step_Description" translatable="false">Recipe Step Description</string>
    <string name="fake_ingredient_name" translatable="false">Graham Cracker crumbs</string>
    <string name="fake_short_desc" translatable="false">Starting prep</string>
...
