...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.youknow.baking.MainActivity">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
...
